--- a/src/app/modules/corso/corso.component.html
+++ b/src/app/modules/corso/corso.component.html
@@ -1,43 +1,43 @@
  <mat-form-field>
-        <input matInput placeholder="Filter" (keyup)="filter($event)">
+        <input matInput placeholder="{{'OPTIONS.FILTER' | translate}}" (keyup)="filter($event)">
     </mat-form-field>
     <mat-icon>search</mat-icon>
 <div class="container">
   <div class="mat-elevation-z8">
-    <table mat-table [dataSource]="dataSource" >
+    <table mat-table [dataSource]="dataSource" matSort>
 
         <ng-container matColumnDef="id">
-            <th mat-header-cell *matHeaderCellDef> Id </th>
+            <th mat-header-cell mat-sort-header *matHeaderCellDef> Id </th>
             <td mat-cell *matCellDef="let element"> {{element.id}} </td>
         </ng-container>
 
         <ng-container matColumnDef="nome">
-            <th mat-header-cell *matHeaderCellDef> Nome </th>
+            <th mat-header-cell *matHeaderCellDef> {{'COURSE.NAME' | translate}} </th>
             <td mat-cell *matCellDef="let element"> {{element.name}} </td>
         </ng-container>
 
         <ng-container matColumnDef="descrizione">
-            <th mat-header-cell *matHeaderCellDef> Descrizione </th>
+            <th mat-header-cell *matHeaderCellDef> {{'COURSE.DESCRIPTION' | translate}} </th>
             <td mat-cell *matCellDef="let element"> {{element.description}} </td>
         </ng-container>
 
         <ng-container matColumnDef="docente">
-            <th mat-header-cell *matHeaderCellDef> Docente </th>
+            <th mat-header-cell *matHeaderCellDef> {{'COURSE.PROFESSOR' | translate}} </th>
             <td mat-cell *matCellDef="let element"> {{element.professor.name}} {{element.professor.surname}} </td>
         </ng-container>
 
         <ng-container matColumnDef="dataDiInizio">
-            <th mat-header-cell *matHeaderCellDef> Data di inizio corso </th>
+            <th mat-header-cell *matHeaderCellDef> {{'COURSE.BEGIN' | translate}} </th>
             <td mat-cell *matCellDef="let element"> {{(element.startDate | dayjsPipe : 'LL' : 'it') | async}} </td>
         </ng-container>
 
         <ng-container matColumnDef="dataDiFine">
-            <th mat-header-cell *matHeaderCellDef> Data di fine corso </th>
+            <th mat-header-cell *matHeaderCellDef> {{'COURSE.END' | translate}} </th>
             <td mat-cell *matCellDef="let element"> {{(element.endDate | dayjsPipe : 'LL' : 'it') | async}} </td>
         </ng-container>
 
         <ng-container matColumnDef="modifica">
-            <th mat-header-cell *matHeaderCellDef> Modifica </th>
+            <th mat-header-cell *matHeaderCellDef> {{'OPTIONS.MODIFY' | translate}} </th>
             <td mat-cell *matCellDef="let element">
                 <button mat-icon-button color="" (click)="startModify(element)" [ngClass]="{'noClick': isClicked == true}">
                     <mat-icon>create</mat-icon>
@@ -46,7 +46,7 @@
         </ng-container>
 
         <ng-container matColumnDef="rimuovi">
-            <th mat-header-cell *matHeaderCellDef> Rimuovi </th>
+            <th mat-header-cell *matHeaderCellDef> {{'OPTIONS.DELETE' | translate}} </th>
             <td mat-cell *matCellDef="let element">
                 <button mat-icon-button color="warn" (click)="deleteCorso(element.id)" [ngClass]="{'noClick': isClicked == true}">
                     <mat-icon>delete</mat-icon>
