--- a/src/app/modules/professore/professore.component.html
+++ b/src/app/modules/professore/professore.component.html
@@ -43,7 +43,7 @@
       </ng-container>
 
       <ng-container matColumnDef="cap">
-          <th mat-header-cell *matHeaderCellDef> CAP </th>
+          <th mat-header-cell *matHeaderCellDef> {{'USER.CAP' | translate}} </th>
           <td mat-cell *matCellDef="let element"> {{element.cap}} </td>
       </ng-container>
 
